# analytical-platform

./: .editorconfig  .gitignore  .grype.yml  .jscpd.json  .lycheeignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CONTRIBUTING.md  Gemfile  Makefile  PAT_TEST.md  README.md  change-git-user-name.txt  config.py  gource  requirements-lambda.txt  streamlit_app.py  vendor.sh
.devcontainer/: devcontainer-build.json  (+3 more)
python-libraries/data-platform-catalogue/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python-libraries/data-platform-catalogue/data_platform_catalogue/: __init__.py  client.py  datahub_metadata.py  debug.py  entities.py  entities_v2.py  search_types.py
python-libraries/data-platform-catalogue/data_platform_catalogue/client/: README.md  __init__.py  base.py  datahub.py  datahub_client.py  exceptions.py  graphql_helpers.py  openmetadata.py  search.py
python-libraries/data-platform-catalogue/data_platform_catalogue/client/datahub/: __init__.py  datahub_client.py  graphql_helpers.py  search.py
python-libraries/data-platform-catalogue/data_platform_catalogue/client/datahub/graphql/: getChartDetails.graphql  getDatasetDetails.graphql  listContainerEntities.graphql  listDataProductAssets.graphql  search.graphql
python-libraries/data-platform-catalogue/data_platform_catalogue/client/graphql/: facets.graphql  getChartDetails.graphql  getGlossaryTerms.graphql
python-libraries/data-platform-catalogue/tests/: conftest.py  test_client.py  test_client_datahub.py  test_client_openmetadata.py  test_datahub_search.py  test_entities.py  test_integration_with_datahub_server.py  test_integration_with_openmetadata_server.py  test_integration_with_server.py  test_search_types.py
python-libraries/data-platform-catalogue/tests/client/datahub/: test_datahub_client.py  test_graphql_helpers.py  test_search.py
python-libraries/data-platform-catalogue/tests/gold_copies/: golden_dataproduct_out_upsert.json
python-libraries/data-platform-catalogue/tests/snapshots/: datahub_create_athena_table.json  datahub_create_athena_table_with_metadata.json  datahub_create_table.json  datahub_create_table_with_metadata.json  datahub_create_two_tables_with_metadata.json  golden_dataproduct_out.json  golden_dataproduct_out_upsert.json  test_upsert_table.json  test_upsert_table_and_database.json
python-libraries/data-platform-catalogue/tests/test_helpers/: graph_helpers.py  mce_helpers.py  type_helpers.py
python-libraries/data-platform-catalogue/tests/test_resources/: golden_data_product_in.json  golden_database_in.json
(+2609 files in other folders)
