[tool.poetry]
name = "ministryofjustice-data-platform-catalogue"
version = "0.8.1"
description = "Library to integrate the MoJ data platform with the catalogue component."
authors = ["MoJ Data Platform Team <data-platform-tech@digital.justice.gov.uk>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "data_platform_catalogue" }]

[tool.poetry.dependencies]
python = "^3.10"
openmetadata-ingestion = "~1.2.0.1"
acryl-datahub = { extras = ["datahub-rest"], version = "^0.12.1.3" }
freezegun = "^1.4.0"
deepdiff = "^6.7.1"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.11.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
